# onix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  gecko.md  install.onix  network.rs  onix-debug-report.json
.gendox/: .gendox_config.json  gendox_config.json  tree.json
.github/workflows/: onix.yml  release.yml
.onix/: config.yaml  install.onix
docs/: FAQ.md  MVP.md  arch.md  commands.md  concept.md  ideas.md  inspect.md  pipeline.md  roadmap.md  schema.yaml  tips.md  workflow.md
src/: env.rs  init.rs  main.rs  manifest_generator.rs  models.rs  network.rs  publish.rs  tui.rs  utils.rs
src/commands/: init.rs  install.rs  mod.rs  publish.rs
