[package]
name = "onix"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
ratatui = "0.26"
crossterm = "0.27"
git2 = "0.19"
octocrab = "0.41"
regex = "1.10"
